[gd_scene load_steps=11 format=3 uid="uid://bcpjkq0dsyo53"]

[ext_resource type="Script" path="res://Scripts/level_select.gd" id="1_gqafm"]

[sub_resource type="Gradient" id="Gradient_4uosf"]
offsets = PackedFloat32Array(0.0060241)
colors = PackedColorArray(0, 0.0941176, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_m4wd5"]
gradient = SubResource("Gradient_4uosf")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g8l2q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qu7sv"]
bg_color = Color(0.720467, 0.720468, 0.720467, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70oll"]
bg_color = Color(0.489622, 0.489622, 0.489622, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dlpr"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6h8m"]
bg_color = Color(0.458405, 0.458405, 0.458405, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gh0mo"]
bg_color = Color(0.103744, 0.103744, 0.103743, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_us57r"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2
shadow_offset = Vector2(0, 3.4)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqafm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_m4wd5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = -154.0
offset_right = 181.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="level1_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_g8l2q")
theme_override_styles/hover = SubResource("StyleBoxFlat_qu7sv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_70oll")
theme_override_styles/normal = SubResource("StyleBoxFlat_6dlpr")
text = "Level One"

[node name="level2_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_g8l2q")
theme_override_styles/hover = SubResource("StyleBoxFlat_qu7sv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_70oll")
theme_override_styles/normal = SubResource("StyleBoxFlat_6dlpr")
text = "Level Two"

[node name="level3_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_g8l2q")
theme_override_styles/hover = SubResource("StyleBoxFlat_qu7sv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_70oll")
theme_override_styles/normal = SubResource("StyleBoxFlat_6dlpr")
text = "Level Three"

[node name="level4_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_g8l2q")
theme_override_styles/hover = SubResource("StyleBoxFlat_qu7sv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_70oll")
theme_override_styles/normal = SubResource("StyleBoxFlat_6dlpr")
text = "Level Four"

[node name="level5_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_g8l2q")
theme_override_styles/hover = SubResource("StyleBoxFlat_qu7sv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_70oll")
theme_override_styles/normal = SubResource("StyleBoxFlat_6dlpr")
text = "Level Five"

[node name="Level6_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_g8l2q")
theme_override_styles/hover = SubResource("StyleBoxFlat_qu7sv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_70oll")
theme_override_styles/normal = SubResource("StyleBoxFlat_6dlpr")
text = "Level Six"

[node name="return_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_g8l2q")
theme_override_styles/hover = SubResource("StyleBoxFlat_p6h8m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gh0mo")
theme_override_styles/normal = SubResource("StyleBoxFlat_us57r")
text = "Return to Main Menu"

[connection signal="pressed" from="VBoxContainer/level1_button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/level2_button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/level3_button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="VBoxContainer/level4_button" to="." method="_on_level_4_button_pressed"]
[connection signal="pressed" from="VBoxContainer/level5_button" to="." method="_on_level_5_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level6_button" to="." method="_on_level_6_button_pressed"]
[connection signal="pressed" from="VBoxContainer/return_button" to="." method="_on_return_button_pressed"]
